# snow2

./: .gitignore  ADVERSARIAL-RESULTS.md  AUDIT-RESULTS.md  CI-RESULTS.md  Cargo.toml  FUZZ-RESULTS.md  README.md  SNOW vs.SNOW2.md  TEST-RESULTS.md  carrier.txt  out.txt
.github/workflows/: ci.yml  pages.yml
examples/: demo_carrier.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bits_to_bytes.rs  fuzz_classic_extract.rs  fuzz_container_parse.rs  fuzz_crlf_mixed.rs  fuzz_extract_pipeline.rs  fuzz_outer_aead.rs  fuzz_v4_header.rs  fuzz_websafe_extract.rs
scripts/: make_carrier.sh  wasm_test.sh
snow2_wasm/: Cargo.toml
snow2_wasm/src/: lib.rs
src/: config.rs  container.rs  crypto.rs  lib.rs  main.rs  pqc.rs  secure_fs.rs  secure_mem.rs
src/stego/: classic_trailing.rs  mod.rs  websafe_zw.rs
tests/: adversarial.rs  cross_platform.rs  negative_edge_cases.rs  pepper_policy.rs  pqc_roundtrip.rs  robustness.rs  roundtrip.rs  websafe_zw_platform.rs
web_demo/: README.md  app.js  index.html  startdemo.md  stress_test.mjs  style.css  test_download_upload.mjs  test_wasm.mjs
