[package]
name = "snow2"
version = "0.1.0"
edition = "2021"
authors = ["Paul Clark"]
description = "A modern Rust tribute to Matthew Kwan's SNOW steganography tool."
license = "GPL-3.0-or-later"
repository = "https://github.com/systemslibrarian/snow2"
readme = "README.md"
keywords = ["steganography", "crypto", "whitespace", "snow", "security"]
categories = ["cryptography", "command-line-utilities"]

[workspace]
members = ["snow2_wasm"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Crypto
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand_core = "0.6"
getrandom = "0.2"

# Encoding
base64 = "0.22"

# Secure memory handling
zeroize = "1.7"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization for container header
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true