[package]
name = "snow2"
version = "0.1.0"
edition = "2021"
authors = ["Paul Clark"]
description = "A modern Rust tribute to Matthew Kwan's SNOW steganography tool."
license = "GPL-3.0-or-later"
repository = "https://github.com/systemslibrarian/snow2"
readme = "README.md"
keywords = ["steganography", "crypto", "whitespace", "snow", "security"]
categories = ["cryptography", "command-line-utilities"]

[workspace]
members = ["snow2_wasm"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Crypto
argon2 = "0.5"
chacha20poly1305 = "0.10"
getrandom = "0.2"

# Encoding
base64 = "0.22"

# Secure memory handling
zeroize = { version = "1.7", features = ["alloc"] }

# Error handling
anyhow = "1.0"

# Serialization for container header
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subtle = "2.6.1"
sha2 = "0.10"
hkdf = "0.12.4"
crc32fast = "1.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = "0.2.182"
rpassword = "7.3"
atty = "0.2"

# PQC dependencies (optional)
pqcrypto-kyber = { version = "0.8.1", optional = true }
pqcrypto-dilithium = { version = "0.5.0", optional = true }
pqcrypto-traits = { version = "0.3.5", optional = true }
rand = { version = "0.8", optional = true }

[features]
default = []
pqc = [
    "dep:pqcrypto-kyber",
    "dep:pqcrypto-dilithium",
    "dep:rand",
    "dep:pqcrypto-traits",
]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
