[package]
name = "snow2-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
zeroize = { version = "1.7", features = ["alloc"] }

[dependencies.snow2]
path = ".."

# Prevent this from clashing with the main workspace
[workspace]
members = ["."]

[[bin]]
name = "fuzz_container_parse"
path = "fuzz_targets/fuzz_container_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_bits_to_bytes"
path = "fuzz_targets/fuzz_bits_to_bytes.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_classic_extract"
path = "fuzz_targets/fuzz_classic_extract.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_websafe_extract"
path = "fuzz_targets/fuzz_websafe_extract.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_extract_pipeline"
path = "fuzz_targets/fuzz_extract_pipeline.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_v4_header"
path = "fuzz_targets/fuzz_v4_header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_crlf_mixed"
path = "fuzz_targets/fuzz_crlf_mixed.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_outer_aead"
path = "fuzz_targets/fuzz_outer_aead.rs"
test = false
doc = false
bench = false
