[package]
name = "snow2_wasm"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
snow2 = { path = ".." }

wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }